--- a/style.css
+++ b/style.css
@@ -90,6 +90,20 @@ html,body {
     width: 62px;
     height: 62px;
 }
+.webpaint-bar .button-fn {
+    cursor: pointer;
+    height: 60px;
+    background: transparent;
+    margin: 0 5px;
+    border: 0;
+    border: 2px solid #efefef;
+    color: #aaa;
+    border-radius: 3px;
+    text-indent: -9999px;
+    overflow: hidden;
+    width: 62px;
+    height: 62px;
+}
 .webpaint-bar .button-mode[data-mode="pen"] {
     background: url(images/pencil.png) no-repeat;
     background-size: cover;
@@ -110,14 +124,24 @@ html,body {
     background: url(images/triangle.png) no-repeat;
     background-size: cover;
 }
+#clear {
+    background: url(images/clean.png) no-repeat;
+    background-size: cover;
+}
+#save {
+    background: url(images/save.png) no-repeat;
+    background-size: cover;
+}
 .webpaint-bar .button-mode:focus {
+    outline: none;
+}
+.webpaint-bar .button-fn:focus {
     outline: none;
 }
 .webpaint-bar .button-mode.active {
     border: 3px solid red;
     box-shadow: inset 0 0 0 1px red;
 }
-
 /* space for canvas */
 .webpaint-canvas-cnt {
     width: 100%;
