--- a/style.css
+++ b/style.css
@@ -104,6 +104,10 @@ html,body {
     width: 62px;
     height: 62px;
 }
+.webpaint-bar .button-mode[data-mode="eraser"] {
+    background: url(images/eraser.png) no-repeat;
+    background-size: cover;
+}
 .webpaint-bar .button-mode[data-mode="pen"] {
     background: url(images/pencil.png) no-repeat;
     background-size: cover;
