--- a/style.css
+++ b/style.css
@@ -136,6 +136,15 @@ html,body {
     background: url(images/save.png) no-repeat;
     background-size: cover;
 }
+#fill {
+    background: url(images/fill.png) no-repeat;
+    background-size: cover;
+}
+#fill.active {
+    border: 3px solid red;
+    box-shadow: inset 0 0 0 1px red;
+    background-color: rgba(255, 0, 0, 0.2);
+}
 .webpaint-bar .button-mode:focus {
     outline: none;
 }
