--- a/style.css
+++ b/style.css
@@ -1,171 +1,8 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-html,body {
-    width:100%;
-    height:100%;
-}
-
-.webpaint {
-    width: 100%;
-    height:100%;
-}
-.webpaint-bar {
-    padding: 20px;
-    border: 4px solid rgb(0, 0, 0);
-    background-color:rgb(161, 161, 161);
-    border-radius: 10px;
-    display: flex;
-    align-items: center;
-    box-shadow: 0 5px 4px rgb(0, 0, 0, 0.2);
-    z-index: 3;
-    position: relative;
-    font-family: sans-serif;
-}
-/* range input */
-.webpaint-bar .paint-size {
-    cursor: pointer;
-}
-/* range value */
-.webpaint-bar .paint-size-val {
-    min-width: 2.3rem;
-    border-radius: 3px;
-    padding: 0 10px;
-    color: #333;
-    background: #333;
-    padding: 5px;
-    margin-right: 30px;
-    margin-left: 10px;
-    color: #fff;
-    display: inline-block;
-    text-align: center;
-    position: relative;
-}
-.webpaint-bar .paint-size-val:before {
-    content: '';
-    position: absolute;
-    left: -10px;
-    top: 50%;
-    transform: translate(0, -50%);
-    width: 0;
-    height: 0;
-    border: 5px solid transparent;
-    border-right-color: #333;
-}
-/* color picker */
-.webpaint-bar .paint-color {
-    cursor: pointer;
-    height: 60px;
-    width: 60px;
-    border: 1px solid #aaa;
-    border-radius: 3px;
-}
-.webpaint-bar .paint-color::-webkit-color-swatch-wrapper {
-    padding: 1px;
-    border: 0;
-}
-.webpaint-bar .paint-color::-webkit-color-swatch {
-    border: none;
-    border-radius: 10px;
-}
-/* tools buttons */
-.webpaint-bar .paint-buttons-cnt
-{
-    margin-left: auto;
-}
-.webpaint-bar .button-mode {
-    cursor: pointer;
-    height: 60px;
-    background: transparent;
-    margin: 0 5px;
-    border: 0;
-    border: 2px solid #efefef;
-    color: #aaa;
-    border-radius: 3px;
-    text-indent: -9999px;
-    overflow: hidden;
-    width: 62px;
-    height: 62px;
-}
-.webpaint-bar .button-fn {
-    cursor: pointer;
-    height: 60px;
-    background: transparent;
-    margin: 0 5px;
-    border: 0;
-    border: 2px solid #efefef;
-    color: #aaa;
-    border-radius: 3px;
-    text-indent: -9999px;
-    overflow: hidden;
-    width: 62px;
-    height: 62px;
-}
-.webpaint-bar .button-mode[data-mode="eraser"] {
-    background: url(images/eraser.png) no-repeat;
-    background-size: cover;
-}
-.webpaint-bar .button-mode[data-mode="pen"] {
-    background: url(images/pencil.png) no-repeat;
-    background-size: cover;
-}
-.webpaint-bar .button-mode[data-mode="line"] {
-    background: url(images/line.png) no-repeat;
-    background-size: cover;
-}
-.webpaint-bar .button-mode[data-mode="rectangle"] {
-    background: url(images/rectangle.png) no-repeat;
-    background-size: cover;
-}
-.webpaint-bar .button-mode[data-mode="circle"] {
-    background: url(images/circle.png) no-repeat;
-    background-size: cover;
-}
-.webpaint-bar .button-mode[data-mode="triangle"] {
-    background: url(images/triangle.png) no-repeat;
-    background-size: cover;
-}
-#clear {
-    background: url(images/clean.png) no-repeat;
-    background-size: cover;
-}
-#save {
-    background: url(images/save.png) no-repeat;
-    background-size: cover;
-}
-#fill {
-    background: url(images/fill.png) no-repeat;
-    background-size: cover;
-}
-#fill.active {
-    border: 3px solid red;
-    box-shadow: inset 0 0 0 1px red;
-    background-color: rgba(255, 0, 0, 0.2);
-}
-.webpaint-bar .button-mode:focus {
-    outline: none;
-}
-.webpaint-bar .button-fn:focus {
-    outline: none;
-}
-.webpaint-bar .button-mode.active {
-    border: 3px solid red;
-    box-shadow: inset 0 0 0 1px red;
-}
-/* space for canvas */
-.webpaint-canvas-cnt {
-    width: 100%;
-    height: 100%;
-    position: relative;
-}
-
-.webpaint-canvas-cnt canvas {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
+#app {
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  color: #2c3e50;
+  margin-top: 60px;
 }
