--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,3 +25,20 @@ body {
 	z-index: 1;
 	pointer-events: none;
 }
+
+.gui {
+	position: absolute;
+	left: 10px;
+	top: 10px;
+	z-index: 3;
+
+	span {
+		border: 1px solid #ddd;
+		padding: 5px 10px;
+		background: #fff;
+		margin-right: 5px;
+		display: inline-block;
+		font-size: 15px;
+		font-family: sans-serif;
+	}
+}
