--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,5 @@
+@use "_gui" as gui;
+
 body {
 	margin: 0;
 	background: url("https://images.unsplash.com/32/Mc8kW4x9Q3aRR3RkP5Im_IMG_4417.jpg?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1770&q=80");
@@ -24,21 +26,4 @@ body {
 #secondaryCanvas {
 	z-index: 1;
 	pointer-events: none;
-}
-
-.gui {
-	position: absolute;
-	left: 10px;
-	top: 10px;
-	z-index: 3;
-
-	span {
-		border: 1px solid #ddd;
-		padding: 5px 10px;
-		background: #fff;
-		margin-right: 5px;
-		display: inline-block;
-		font-size: 15px;
-		font-family: sans-serif;
-	}
 }
